--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "node",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "author": "tejas",
-  "license": "ISC",
+  "name": "facerecognitionbrain",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.18.3",
-    "clarifai": "^2.9.0",
-    "cors": "^2.8.4",
-    "express": "^4.16.4",
-    "knex": "^0.15.2",
-    "pg": "^7.6.0"
+    "clarifai": "^2.5.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-particles-js": "^2.1.0",
+    "react-scripts": "1.0.17",
+    "react-tilt": "^0.1.4",
+    "tachyons": "^4.9.0"
   },
-  "devDependencies": {
-    "nodemon": "^1.18.5"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
